# mnml-aws-sqs

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: app.rs  blit.rs  config.rs  keys.rs  main.rs  sqs.rs  ui.rs
